packages/typ/tests/fixtures/diagnostics/0270_fun_higher_order_callback_mismatch_03.ml
let apply_gamma (f : int -> int) = f 2
let _ = apply_gamma (fun b -> if b then 2 else 3)
